2013-12-12 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m (copyWithZone)
	release copied control point!

2013-11-24 Riccardo Mottola <rm@gnu.org>

	* GRPathObject.m (copyWithZone)
	Copy all object's properties.

2013-11-15 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.m
	* GRBezierPath.m
        Save path description as point series and not psdata (allows saving point type for cusps)

2013-11-14 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m
	Clean up variable scope.

2013-11-14 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m (remakePath)
	Simplify to remake path independently of selected control points.

2013-11-13 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.m
	* GRBezierPath.m
	* GRBox.m
	* GRCircle.m
	* GRDrawableObject.m
	* GRObjectControlPoint.h
	* GRObjectControlPoint.m
	* GRObjectEditor.m
	* GRText.m
	* GRTextEditor.m
	Reimplement copy without NSCopyObject.

2013-11-13 Riccardo Mottola <rm@gnu.org>

	* GRBezierPathEditor.h
	* GRBezierPathEditor.m
	selected control points accessor.

	* GRBezierControlPoint.h
	* GRBezierControlPoint.m
	Symmetrical setter.

	* GRDocView.h
	* GRDocView.m
	Context-menu for changing control point types.

2013-11-05 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.h (unselectOtherControls)
	* GRBezierPath.m
	Remove unselectOtherControls, which is an editor method.

2013-11-04 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Use deep copy to save undo for Path editing.

2013-11-04 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.h
	* GRBezierControlPoint.m
	Initial support for supporting non-symmetrical handles. Disabled.

2013-10-31 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Set only properties which are really present.

2013-10-24 Riccardo Mottola  <rm@gnu.org>

	* GRDocView.m
	Fix Page Down scrolling.

2013-10-20 Riccardo Mottola  <rm@gnu.org>

	* GRDocView.m
	Make page Up/Down keys work again, delete key action registers undo.

2013-10-18 Riccardo Mottola  <rm@gnu.org>

	* GRCircle.h
	* GRCircle.m