@@ -1,3 +1,8 @@
+2014-01-17 Riccardo Mottola <rm@gnu.org>
+
+	* GRBezierControlPoint.m
+	Initialize all handles to the center point.
+
 2013-12-12 Riccardo Mottola <rm@gnu.org>
 
 	* GRBezierPath.m (copyWithZone)
